<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="32dp"
    >

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="0.40"
                android:orientation="vertical"/>


        <TextView
                android:id="@+id/txt_settings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_text"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/txt_temperature_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature_max"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_settings"
                app:layout_constraintStart_toStartOf="parent"/>

        <com.warkiz.widget.IndicatorSeekBar
                android:id="@+id/sb_temperature_max"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:isb_max="45"
                app:isb_min="-20"
                app:isb_only_thumb_draggable="false"
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_settings"
                app:layout_constraintStart_toEndOf="@+id/guideline"
                app:layout_constraintBottom_toBottomOf="@+id/txt_temperature_max"/>

        <TextView
                android:id="@+id/txt_temperature_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature_min"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_temperature_max"
                app:layout_constraintStart_toStartOf="parent"/>

        <com.warkiz.widget.IndicatorSeekBar
                android:id="@+id/sb_temperature_min"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:isb_max="45"
                app:isb_min="-20"
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_temperature_max"
                app:layout_constraintStart_toEndOf="@+id/guideline"
                app:layout_constraintBottom_toBottomOf="@+id/txt_temperature_min"/>

        <TextView
                android:id="@+id/txt_wind_speed_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_speed_max"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_temperature_min"
                app:layout_constraintStart_toStartOf="parent"/>

        <com.warkiz.widget.IndicatorSeekBar
                android:id="@+id/sb_wind_speed_max"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:isb_max="20"
                app:isb_min="0"
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_temperature_min"
                app:layout_constraintStart_toEndOf="@+id/guideline"
                app:layout_constraintBottom_toBottomOf="@+id/txt_wind_speed_max"/>

        <TextView
                android:id="@+id/txt_rain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rain"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_wind_speed_max"
                app:layout_constraintStart_toStartOf="parent"/>

        <Switch
                android:id="@+id/sw_rain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_wind_speed_max"
                app:layout_constraintStart_toEndOf="@+id/txt_rain"
                app:layout_constraintBottom_toBottomOf="@+id/txt_rain"/>


        <TextView
                android:id="@+id/txt_current_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_rain"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:text="@string/save"
                android:layout_marginBottom="60dp"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_current_setting"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>